--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -32,25 +32,51 @@
 }
 /***************************/
 /****Bootsnip gallery ******/
-body {
-    font-family: sans-serif;
-}
-#container {
-    background: #DDD;
-    max-width: 1400px;
-}
-.item {
-    width: 200px;
-    float: left;
-}
-.item img {
-    display: block;
-    width: 100%;
-}
-button {
-    font-size: 18px;
-}
-.container{
-    width:100%;
+.home-gallery-img-container {
+  position: relative;
+  &:hover {
+    .my-img {
+      opacity: 0.5;
+    }
+    .my-info {
+      opacity: 1;
+    }
+  }
+  .my-img {
+    -webkit-box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
+    margin-bottom:20px;
+    &:hover {
+    }
+  }
+  .my-info {
+    overflow: hidden;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    opacity: 0;
+
+    >* {
+      display: block;
+      margin: 0px;
+    }
+
+    h3 {
+      font-size: 20px;
+      a {
+        text-decoration: none;
+        word-wrap: break-word;
+        color: white;
+      }
+    }
+
+    p {
+      margin: 0;
+    }
+  }
 }
 /***************************/
