--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -32,51 +32,77 @@
 }
 /***************************/
 /****Bootsnip gallery ******/
-.home-gallery-img-container {
+$text-color : #414141;
+
+.home-gallery-entry-container {
+  // padding: 0;
+
+  display: inline-block;
   position: relative;
+  // height: 300px;
+  width: 300px;
+  // max-width: 400px;
   &:hover {
-    .my-img {
-      opacity: 0.5;
+    .gallery-entry-img {
+      filter: grayscale(100%);
+      filter: brightness(50%);
     }
-    .my-info {
+    .gallery-entry-fav, h2, h3, p {
       opacity: 1;
     }
   }
-  .my-img {
+  .gallery-entry-img {
+    width: 270px;
     -webkit-box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
     box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
-    margin-bottom:20px;
-    &:hover {
-    }
+    margin-bottom: 20px;
   }
-  .my-info {
-    overflow: hidden;
+
+  .gallery-entry-fav {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    top: 0px;
+    right: 30px;
+    padding: 0 15px;
+    font-size: 30px;
+    color: green;
+    background-color: rgba(100, 100, 100, 0.5);
+    opacity: 0;
+  }
+
+  h2 {
+    position: absolute;
+    font-size: 30px;
+    font-weight: 800;
+    bottom: 34px;
+    left: 20px;
     color: white;
     opacity: 0;
+  }
 
-    >* {
-      display: block;
-      margin: 0px;
-    }
+  h3 {
+    position: absolute;
+    font-size: 15px;
+    bottom: 17px;
+    left: 20px;
+    opacity: 0;
 
-    h3 {
-      font-size: 20px;
-      a {
-        text-decoration: none;
-        word-wrap: break-word;
-        color: white;
+    a {
+      text-decoration: none;
+      color: white;
+
+      &:hover {
+        text-decoration: underline;
       }
     }
+  }
 
-    p {
-      margin: 0;
-    }
+  p {
+    position: absolute;
+    bottom: 15px;
+    right: 40px;
+    color: white;
+    opacity: 0;
   }
 }
 /***************************/
