--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -1,5 +1,41 @@
+$bg-color : rgba(28, 66, 47, 0.1);
+$bg-color-btn: rgba(28, 66, 47, 0.1);
+$text-color : black;
+
+body {
+  background-color: $bg-color;
+  font-family: 'Quattrocento', serif !important;
+}
 .main-nav {
-  // background-color: red;
+  background-color: rgba(28, 66, 47, 0.8);
+}
+
+.navbar-default {
+  border: 0;
+}
+
+.navbar-default .navbar-brand {
+  // color: black;
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: 700;
+}
+.navbar-default .navbar-nav>li>a,
+.navbar-default .navbar-text {
+  // color: black;
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: 700;
+}
+
+.navbar-default .navbar-brand:focus,
+.navbar-default .navbar-brand:hover {
+    color: white;
+    background-color: transparent;
+}
+
+.navbar-default .navbar-nav>li>a:focus,
+.navbar-default .navbar-nav>li>a:hover {
+    color: white;
+    background-color: transparent;
 }
 
 .my-error-message {
@@ -32,7 +68,6 @@
 }
 /***************************/
 /****Bootsnip gallery ******/
-$text-color : #414141;
 
 .home-gallery-entry-container {
   // padding: 0;
@@ -44,7 +79,6 @@ $text-color : #414141;
   // max-width: 400px;
   &:hover {
     .gallery-entry-img {
-      filter: grayscale(100%);
       filter: brightness(50%);
     }
     .gallery-entry-fav, h2, h3, p {
