--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -68,35 +68,59 @@ body {
 }
 /***************************/
 /****Bootsnip gallery ******/
+.my-container {
+  margin: 0 auto;
+}
 
 .home-gallery-entry-container {
-  // padding: 0;
-
   display: inline-block;
   position: relative;
-  // height: 300px;
-  width: 300px;
-  // max-width: 400px;
+  min-width: 300px;
+  height: 300px;
+  overflow: hidden;
+  margin-bottom: 20px;
+
+  .gallery-entry-gradient {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 300px;
+    padding: 0;
+    margin: 0;
+    z-index: 5;
+  }
+
   &:hover {
+    // background-color: rgba(0, 0, 0, 0.5);
+    // background-image: linear-gradient(to bottom, #FFFFFF 0%, #000000 90%);
+    .gallery-entry-gradient {
+      background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 10%,
+      rgba(200, 200, 200, 0.1) 50%,
+      rgba(0, 0, 0, 0.8) 90%);
+    }
     .gallery-entry-img {
-      filter: brightness(50%);
+      // filter: brightness(25%);
     }
     .gallery-entry-fav, h2, h3, p {
       opacity: 1;
     }
   }
   .gallery-entry-img {
-    width: 270px;
-    -webkit-box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
-    box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
-    margin-bottom: 20px;
+    z-index: 1;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 95%;
+    height: auto;
+    box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.75);
   }
 
   .gallery-entry-fav {
     position: absolute;
     top: 0px;
-    right: 30px;
+    right: 20px;
     padding: 0 15px;
     font-size: 30px;
     color: green;
@@ -105,21 +129,28 @@ body {
   }
 
   h2 {
+    z-index: 10;
     position: absolute;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 800;
-    bottom: 34px;
-    left: 20px;
+    bottom: 42px;
+    left: 10px;
     color: white;
     opacity: 0;
   }
 
   h3 {
+    z-index: 10;
     position: absolute;
     font-size: 15px;
-    bottom: 17px;
-    left: 20px;
+    bottom: 16px;
+    left: 10px;
     opacity: 0;
+    img {
+      width: 15px;
+      height: 15px;
+      margin-bottom: 3px;
+    }
 
     a {
       text-decoration: none;
@@ -132,9 +163,10 @@ body {
   }
 
   p {
+    z-index: 10;
     position: absolute;
-    bottom: 15px;
-    right: 40px;
+    bottom: -6px;
+    left: 10px;
     color: white;
     opacity: 0;
   }
