--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -253,3 +253,126 @@ body {
   margin-top: 150px;
   // background-image: linear-gradient(to bottom, #FFFFFF 0%, #c4c4c4 100%);
 }
+/*********************************************/
+/*********************************************/
+/*********************************************/
+.user-content {
+
+}
+/** user/gallery.blade.php **/
+#user-gallery-container {
+  margin-top: 20px;
+  margin-left: 20px;
+  .home-gallery-entry-container {
+    display: inline-block;
+    position: relative;
+    min-width: 200px;
+    height: 200px;
+    overflow: hidden;
+    margin-bottom: 20px;
+    .gallery-entry-gradient {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 200px;
+      padding: 0;
+      margin: 0;
+      z-index: 5;
+    }
+    &:hover {
+      .gallery-entry-gradient {
+        background-image: linear-gradient(to bottom,
+        rgba(255, 255, 255, 0) 10%,
+        rgba(200, 200, 200, 0.1) 50%,
+        rgba(0, 0, 0, 0.8) 90%);
+      }
+      .gallery-entry-fav, h2, h3, p {
+        opacity: 1;
+      }
+    }
+    .gallery-entry-image {
+      z-index: 1;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: 95%;
+      box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.75);
+    }
+    .gallery-entry-fav {
+      position: absolute;
+      top: 0px;
+      right: 20px;
+      padding: 0 15px;
+      font-size: 30px;
+      color: green;
+      background-color: rgba(100, 100, 100, 0.5);
+      opacity: 0;
+    }
+    h2 {
+      z-index: 10;
+      position: absolute;
+      font-size: 20px;
+      font-weight: 800;
+      bottom: 42px;
+      left: 10px;
+      color: white;
+      opacity: 0;
+    }
+    h3 {
+      z-index: 10;
+      position: absolute;
+      font-size: 15px;
+      bottom: 16px;
+      left: 10px;
+      opacity: 0;
+      img {
+        width: 15px;
+        height: 15px;
+        margin-bottom: 3px;
+      }
+      a {
+        text-decoration: none;
+        color: white;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+    p {
+      z-index: 10;
+      position: absolute;
+      bottom: -6px;
+      left: 10px;
+      color: white;
+      opacity: 0;
+    }
+  }
+}
+#user-profile-container {
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  textarea,
+  input,
+  select {
+    background-color: transparent;
+    border: 0;
+    display: inline-block;
+  }
+  textarea {
+    padding: 0;
+    width: 100%;
+    overflow: hidden;
+    resize: none;
+    height: auto;
+    // height: 500px;
+    cursor: default;
+    text-align: justify;
+  }
+  #user-gender {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
+}
