--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -43,6 +43,7 @@ $bg-color-btn: rgba(28, 66, 47, 0.1);
 /*********************************************/
 /*********************************************/
 /*********************************************/
+html,
 body {
   font-family: 'Quattrocento', serif !important;
   // background-image: linear-gradient(to bottom, #FFFFFF 0%, #c4c4c4 100%);
@@ -52,6 +53,30 @@ body {
   width: 100%;
   background-color: rgba(39, 48, 47, 1);
   height: 75px;
+  form {
+    padding: 0;
+    margin: 0;
+    margin-top: 19.5px;
+    margin-bottom: 19.5px;
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    &:focus {
+      outline-style: solid;
+      outline-color: red;
+    }
+    input {
+      background: transparent;
+      border-radius: 20px;
+      border: 0;
+      color: rgba(255, 255, 255, 0.75);
+      outline-color: transparent;
+    }
+    button {
+      background: transparent;
+      color: rgba(255, 255, 255, 0.5);
+    }
+  }
 }
 /*********************************************/
 /*********************************************/
@@ -103,6 +128,7 @@ body {
 #home-container {
   position: absolute;
   left: 200px;
+  height: 100%;
   margin-top: 75px;
   background-image: linear-gradient(to bottom, #FFFFFF 0%, #c4c4c4 100%);
   #home-banner-container {
