--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -61,10 +61,6 @@ body {
     background: transparent;
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 20px;
-    &:focus {
-      outline-style: solid;
-      outline-color: red;
-    }
     input {
       background: transparent;
       border-radius: 20px;
@@ -74,6 +70,7 @@ body {
     }
     button {
       background: transparent;
+      outline: 0;
       color: rgba(255, 255, 255, 0.5);
     }
   }
@@ -118,22 +115,57 @@ body {
 /*********************************************/
 /** home.blade.php **/
 #side-menu {
-  width: 200px;
+  z-index: 5;
+  width: 250px;
   height: 100%;
   position: fixed;
-  background: white;
-  top: 75px;
   background-color: rgba(47, 55, 54, 1);
+  form {
+    width: 200px;
+    padding: 0;
+    margin: 0;
+    margin-top: 75px;
+    margin-left: 25px;
+    color: rgba(255, 255, 255, 0.75);
+    h3 {
+      font-weight: 600;
+      margin: 0;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+    .search-box {
+      width: 100%;
+      background: transparent;
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      border-radius: 20px;
+      margin-bottom: 10px;
+      input {
+        display: none;
+        width: 100%;
+        background: transparent;
+        border-radius: 20px;
+        border: 0;
+        color: rgba(255, 255, 255, 0.75);
+        outline-color: transparent;
+      }
+      #as-title {
+        display: block;
+      }
+    }
+    .search-checks {
+    }
+  }
 }
 #home-container {
+  z-index: 0;
   position: absolute;
-  left: 200px;
-  height: 100%;
   margin-top: 75px;
-  background-image: linear-gradient(to bottom, #FFFFFF 0%, #c4c4c4 100%);
+  right: 0;
+  width: 100%;
+  height: 100%;
   #home-banner-container {
     height: 300px;
-    width: 100%;
+    margin-left: 250px;
     overflow: hidden;
     position: relative;
     #home-banner-image {
@@ -179,8 +211,9 @@ body {
     }
   }
   #home-gallery-container {
-    margin-top: 20px;
-    margin-left: 20px;
+    margin-left: 250px;
+    padding-top: 20px;
+    padding-left: 20px;
     .home-gallery-entry-container {
       display: inline-block;
       position: relative;
@@ -245,16 +278,21 @@ body {
         bottom: 16px;
         left: 10px;
         opacity: 0;
-        img {
-          width: 15px;
-          height: 15px;
-          margin-bottom: 3px;
-        }
         a {
-          text-decoration: none;
-          color: white;
-          &:hover {
-            text-decoration: underline;
+          img {
+            position: absolute;
+            bottom: 5px;
+            width: 15px;
+            height: 15px;
+          }
+          span {
+            position: absolute;
+            bottom: 5px;
+            left: 20px;
+            color: white;
+            &:hover {
+              text-decoration: underline;
+            }
           }
         }
       }
@@ -277,7 +315,6 @@ body {
   position: fixed;
   width: 100%;
   margin-top: 150px;
-  // background-image: linear-gradient(to bottom, #FFFFFF 0%, #c4c4c4 100%);
 }
 /*********************************************/
 /*********************************************/
