--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -127,11 +127,38 @@ body {
     margin-top: 75px;
     margin-left: 25px;
     color: rgba(255, 255, 255, 0.75);
+    hr {
+      margin-bottom: 5px;
+      margin-top: 5px;
+    }
+    .toggleable {
+      display: none;
+    }
+    .as-categories {
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      padding: 10px;
+      div {
+        margin: 0;
+        label {
+          margin: 0;
+        }
+        input {
+          margin: 0;
+        }
+      }
+    }
     h3 {
       font-weight: 600;
       margin: 0;
       margin-top: 10px;
       margin-bottom: 10px;
+      a {
+        color: inherit;
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
     .search-box {
       width: 100%;
@@ -140,7 +167,6 @@ body {
       border-radius: 20px;
       margin-bottom: 10px;
       input {
-        display: none;
         width: 100%;
         background: transparent;
         border-radius: 20px;
@@ -148,11 +174,14 @@ body {
         color: rgba(255, 255, 255, 0.75);
         outline-color: transparent;
       }
-      #as-title {
-        display: block;
-      }
     }
     .search-checks {
+      label {
+        &:hover {
+          text-decoration: underline;
+          cursor: pointer;
+        }
+      }
     }
   }
 }
