--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -183,6 +183,14 @@ body {
         }
       }
     }
+    button {
+      background: transparent;
+      // outline: 0;
+      color: rgba(255, 255, 255, 0.75);
+      border: 1px solid rgba(255, 255, 255, 0.75);
+      border-radius: 20px;
+      margin-top: 10px;
+    }
   }
 }
 #home-container {
