--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -1,5 +1,12 @@
-$bg-color : rgba(28, 66, 47, 0.1);
-$bg-color-btn: rgba(28, 66, 47, 0.1);
+//main-nav background-color: rgba(39, 48, 47, 1);
+$bg-darker: rgba(39, 48, 47, 1);
+//side-menu background-color: rgba(47, 55, 54, 1);
+$bg-lighter: rgba(47, 55, 54, 1);
+//text-color color: rgba(255, 255, 255, 0.5);
+$text-white05: rgba(255, 255, 255, 0.5);
+$text-white075: rgba(255, 255, 255, 0.75);
+
+
 .nav-to-content-margin {
   margin-top: 75px;
 }
@@ -199,7 +206,7 @@ body {
   margin-top: 75px;
   right: 0;
   width: 100%;
-  height: 100%;
+  background-image: linear-gradient(to bottom, #FFFFFF 0%, #c4c4c4 100%);
   #home-banner-container {
     height: 300px;
     margin-left: 250px;
@@ -342,6 +349,31 @@ body {
         opacity: 0;
       }
     }
+    .page-links {
+      margin: 0;
+      .active {
+        span {
+          background-color: $bg-lighter;
+          border-color: $bg-lighter;
+          color: white;
+        }
+      }
+      li {
+        &:hover {
+          a {
+            background-color: rgba(39, 48, 47, 0.75);
+            border-color: rgba(39, 48, 47, 0.75);
+            color: $text-white075;
+          }
+        }
+      }
+      a,
+      span {
+        border-color: $bg-lighter;
+        background-color: rgba(39, 48, 47, 0.5);
+        color: $text-white05;
+      }
+    }
   }
 }
 /*********************************************/
@@ -357,7 +389,6 @@ body {
 /*********************************************/
 /*********************************************/
 .user-content {
-
 }
 /** user/gallery.blade.php **/
 #user-gallery-container {
