--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -6,7 +6,6 @@ $bg-lighter: rgba(47, 55, 54, 1);
 $text-white05: rgba(255, 255, 255, 0.5);
 $text-white075: rgba(255, 255, 255, 0.75);
 
-
 .nav-to-content-margin {
   margin-top: 75px;
 }
@@ -55,8 +54,6 @@ $text-white075: rgba(255, 255, 255, 0.75);
 /*********************************************/
 /*********************************************/
 /*********************************************/
-html {
-}
 body {
   font-family: 'Quattrocento', serif !important;
   background-color: rgba(47,55,54,0.1);
@@ -130,12 +127,46 @@ body {
   width: 100%;
   margin-top: 85px;
   .image-container {
+    position: relative;
     margin-left: 50%;
     transform: translateX(-50%);
     margin-bottom: 10px;
     text-align: center;
     img {
       max-height: 800px;
+      width: 100%;
+    }
+    .favorite-button {
+      margin-left: 50%;
+      transform: translateX(-50%);
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 15px;
+      font-weight: 800;
+      .favorite-remove {
+        background-color: red;
+        color: $text-white075;
+        &:hover {
+          background-color: #a00;
+          color: white;
+        }
+      }
+      .favorite-add {
+        background-color: green;
+        color: $text-white075;
+        &:hover {
+          background-color: #0a0;
+          color: white;
+        }
+      }
+      a {
+        text-decoration: none;
+        display: inline-block;
+        cursor: pointer;
+        padding: 10px;
+        border-radius: 20px;
+        transition: 0.25s all;
+      }
     }
   }
   .image-description-container {
@@ -147,7 +178,7 @@ body {
       .user-avatar {
         width: 75px;
         height: 75px;
-        border: 5px solid rgba(255, 255, 255, 0.5);
+        // border: 5px solid rgba(255, 255, 255, 0.5);
       }
       .entry-title {
         position: absolute;
@@ -187,7 +218,7 @@ body {
     .user-avatar {
       width: 75px;
       height: 75px;
-      border: 5px solid rgba(255, 255, 255, 0.5);
+      // border: 5px solid rgba(255, 255, 255, 0.5);
       float: left;
       margin-right: 10px;
       margin-left: 5px;
@@ -226,7 +257,7 @@ body {
       .user-avatar {
         width: 75px;
         height: 75px;
-        border: 5px solid rgba(255, 255, 255, 0.5);
+        // border: 5px solid rgba(255, 255, 255, 0.5);
         float: left;
         margin-right: 10px;
         margin-left: 5px;
@@ -288,6 +319,7 @@ body {
       margin-top: 10px;
       margin-bottom: 10px;
       a {
+        cursor: pointer;
         color: inherit;
         text-decoration: none;
         &:hover {
@@ -437,7 +469,7 @@ body {
         position: absolute;
         top: 0;
         right: 0;
-        padding: 0 15px;
+        padding: 5px 15px;
         font-size: 30px;
         color: green;
         background-color: rgba(0, 0, 0, 0.75);
@@ -529,8 +561,6 @@ body {
 /*********************************************/
 /*********************************************/
 /*********************************************/
-.user-content {
-}
 /** user/gallery.blade.php **/
 #user-gallery-container {
   margin-top: 20px;
@@ -539,6 +569,7 @@ body {
     display: inline-block;
     position: relative;
     min-width: 200px;
+    max-width: 500px;
     height: 200px;
     overflow: hidden;
     margin-bottom: 20px;
@@ -569,18 +600,19 @@ body {
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
-      width: 95%;
-      box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.75);
+      width: 100%;
     }
     .gallery-entry-fav {
       position: absolute;
-      top: 0px;
-      right: 20px;
-      padding: 0 15px;
+      top: 0;
+      right: 0;
+      padding: 5px 15px;
       font-size: 30px;
       color: green;
-      background-color: rgba(100, 100, 100, 0.5);
+      background-color: rgba(0, 0, 0, 0.75);
       opacity: 0;
+      z-index: 5;
+      cursor: pointer;
     }
     h2 {
       z-index: 10;
@@ -599,16 +631,21 @@ body {
       bottom: 16px;
       left: 10px;
       opacity: 0;
-      img {
-        width: 15px;
-        height: 15px;
-        margin-bottom: 3px;
-      }
       a {
-        text-decoration: none;
-        color: white;
-        &:hover {
-          text-decoration: underline;
+        img {
+          position: absolute;
+          bottom: 5px;
+          width: 15px;
+          height: 15px;
+        }
+        span {
+          position: absolute;
+          bottom: 5px;
+          left: 20px;
+          color: white;
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
     }
@@ -619,6 +656,32 @@ body {
       left: 10px;
       color: white;
       opacity: 0;
+    }
+  }
+  .page-links {
+    width: 100%;
+    margin: 0;
+    .active {
+      span {
+        background-color: $bg-lighter;
+        border-color: $bg-lighter;
+        color: white;
+      }
+    }
+    li {
+      &:hover {
+        a {
+          background-color: rgba(39, 48, 47, 0.75);
+          border-color: rgba(39, 48, 47, 0.75);
+          color: $text-white075;
+        }
+      }
+    }
+    a,
+    span {
+      border-color: $bg-lighter;
+      background-color: rgba(39, 48, 47, 0.5);
+      color: $text-white05;
     }
   }
 }
