--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,5 +1,5 @@
 /* USER PROFILE PAGE */
-#user-profile {
+#user-p2rofile {
   position: absolute;
   top: 75px;
 }
@@ -14,19 +14,20 @@
     height: 85px;
 }
 .card.hovercard .user-avatar {
-    position: absolute;
+    /*position: absolute;*/
     bottom: 5px;
     left: 5px;
 }
 .card.hovercard .user-avatar img {
     width: 75px;
     height: 75px;
-    border: 5px solid rgba(255, 255, 255, 0.5);
 }
 .card.hovercard .card-info {
-    position: absolute;
-    bottom: 15px;
-    left: 90px;
+    /*position: absolute;*/
+    /*bottom: 15px;*/
+    /*left: 90px;*/
+    position: relative;
+    display: inline-block
 }
 .card.hovercard .card-info .card-title {
   display: block;
