--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -51,6 +51,12 @@ $text-white075: rgba(255, 255, 255, 0.75);
   pointer-events: none;
   text-decoration: underline;
 }
+.navbar-default .navbar-nav>.open>a,
+.navbar-default .navbar-nav>.open>a:focus,
+.navbar-default .navbar-nav>.open>a:hover {
+    background-color: transparent;
+    color: white;
+}
 /*********************************************/
 /*********************************************/
 /*********************************************/
@@ -124,7 +130,6 @@ body {
 /** gallery-entry/show-blade.php **/
 #gallery-entry-show-container {
   position: absolute;
-  width: 100%;
   margin-top: 85px;
   .image-container {
     position: relative;
@@ -132,9 +137,11 @@ body {
     transform: translateX(-50%);
     margin-bottom: 10px;
     text-align: center;
+    max-width: 800px;
+    max-height: 800px;
+    overflow: hidden;
     img {
-      max-height: 800px;
-      width: 100%;
+      // max-height: 100%;
     }
     .favorite-button {
       margin-left: 50%;
@@ -178,7 +185,6 @@ body {
       .user-avatar {
         width: 75px;
         height: 75px;
-        // border: 5px solid rgba(255, 255, 255, 0.5);
       }
       .entry-title {
         position: absolute;
@@ -561,6 +567,40 @@ body {
 /*********************************************/
 /*********************************************/
 /*********************************************/
+/** user.blade.php **/
+#user-profile {
+  position: absolute;
+  top: 75px;
+  .user-owner {
+    background-color: rgba(47,55,54,0.2);
+    position: relative;
+    padding: 10px 5px;
+    .user-avatar {
+      width: 75px;
+      height: 75px;
+    }
+    .user-name {
+      position: absolute;
+      left: 100px;
+      top: 20px;
+      a {
+        font-size: 20px;
+        color: black;
+      }
+    }
+    .user-tagline {
+      position: absolute;
+      left: 100px;
+      bottom: 20px;
+    }
+    .tags-container {
+      margin-left: 95px;
+    }
+    .category-container {
+      margin-left: 95px;
+    }
+  }
+}
 /** user/gallery.blade.php **/
 #user-gallery-container {
   margin-top: 20px;
@@ -708,5 +748,128 @@ body {
   #user-gender {
     -webkit-appearance: none;
     -moz-appearance: none;
+  }
+}
+#user-favorite-container {
+  margin-top: 20px;
+  margin-left: 20px;
+  .home-gallery-entry-container {
+    display: inline-block;
+    position: relative;
+    min-width: 200px;
+    max-width: 500px;
+    height: 200px;
+    overflow: hidden;
+    margin-bottom: 20px;
+    .gallery-entry-gradient {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 200px;
+      padding: 0;
+      margin: 0;
+      z-index: 5;
+    }
+    &:hover {
+      .gallery-entry-gradient {
+        background-image: linear-gradient(to bottom,
+        rgba(255, 255, 255, 0) 10%,
+        rgba(200, 200, 200, 0.1) 50%,
+        rgba(0, 0, 0, 0.8) 90%);
+      }
+      .gallery-entry-fav, h2, h3, p {
+        opacity: 1;
+      }
+    }
+    .gallery-entry-image {
+      z-index: 1;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+    }
+    .gallery-entry-fav {
+      position: absolute;
+      top: 0;
+      right: 0;
+      padding: 5px 15px;
+      font-size: 30px;
+      color: green;
+      background-color: rgba(0, 0, 0, 0.75);
+      opacity: 0;
+      z-index: 5;
+      cursor: pointer;
+    }
+    h2 {
+      z-index: 10;
+      position: absolute;
+      font-size: 20px;
+      font-weight: 800;
+      bottom: 42px;
+      left: 10px;
+      color: white;
+      opacity: 0;
+    }
+    h3 {
+      z-index: 10;
+      position: absolute;
+      font-size: 15px;
+      bottom: 16px;
+      left: 10px;
+      opacity: 0;
+      a {
+        img {
+          position: absolute;
+          bottom: 5px;
+          width: 15px;
+          height: 15px;
+        }
+        span {
+          position: absolute;
+          bottom: 5px;
+          left: 20px;
+          color: white;
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+    p {
+      z-index: 10;
+      position: absolute;
+      bottom: -6px;
+      left: 10px;
+      color: white;
+      opacity: 0;
+    }
+  }
+  .page-links {
+    width: 100%;
+    margin: 0;
+    .active {
+      span {
+        background-color: $bg-lighter;
+        border-color: $bg-lighter;
+        color: white;
+      }
+    }
+    li {
+      &:hover {
+        a {
+          background-color: rgba(39, 48, 47, 0.75);
+          border-color: rgba(39, 48, 47, 0.75);
+          color: $text-white075;
+        }
+      }
+    }
+    a,
+    span {
+      border-color: $bg-lighter;
+      background-color: rgba(39, 48, 47, 0.5);
+      color: $text-white05;
+    }
   }
 }
