--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -125,6 +125,9 @@ body {
   position: absolute;
   height: 100%;
   margin-top: 75px;
+  #img-category {
+    margin-bottom: 10px;
+  }
   // background-image: linear-gradient(to bottom, #FFFFFF 0%, #c4c4c4 100%);
 }
 /** gallery-entry/show-blade.php **/
@@ -602,8 +605,8 @@ body {
       bottom: 20px;
     }
   }
-  .image-change {
-    display: none;
+  .avatar-change {
+    opacity: 0;
     position: absolute;
     width: 75px;
     height: 75px;
@@ -611,7 +614,7 @@ body {
     background-color: rgba(47,55,54,0.5);
     label {
       line-height: 5;
-      margin-left: 8px;
+      display: block;
       padding: 0;
       color: white;
     }
